Compiladores/bin/compilador/bin/compilador/RustGrammar.jj
/**************************************************************
 * TODA E QUALQUER ALTERAÇÃO DEVE SER REALIZADA NESSE ARQUIVO *
 * RustGrammar.jj                                             *
 **************************************************************/

options {
  STATIC = false;
}

PARSER_BEGIN(RustGrammar)
package compilador;

public class RustGrammar {
    public static void main(String[] args) throws Exception {

        java.io.Reader reader = new java.io.FileReader("codigoTeste.txt");
        RustGrammarTokenManager tm = new RustGrammarTokenManager(new SimpleCharStream(reader));
        

        Token t;
        do {
            t = tm.getNextToken();
            System.out.println("TOKEN: " + t.image + " (" + tokenImage[t.kind] + ")");
        } while (t.kind != EOF);
    }
}

PARSER_END(RustGrammar)

// IGNORAR
SKIP:
{
      " " | "\r" | "\t" | "\n"
    | <COMENTARIO_SIMPMENOR_IGUALS: "//" (~["\n", "\r"])* ("\n" | "\r" | "\r\n")?>
    | <COMENTARIOS_LONGO: "/*" (~[])* "*/">
}

// PALAVRAS RESERVADAS DO RUST
TOKEN :
{
      <FN: "fn"> { System.out.println("Palavra Reservada: " + image); }
    | <MENOR_IGUALT: "MENOR_IGUALt"> { System.out.println("Palavra Reservada: " + image); }
    | <MUT: "mut"> { System.out.println("Palavra Reservada: " + image); }
    | <CONST: "const"> { System.out.println("Palavra Reservada: " + image); }
    | <STATIC: "static"> { System.out.println("Palavra Reservada: " + image); }
    | <STRUCT: "struct"> { System.out.println("Palavra Reservada: " + image); }
    | <ENUM: "enum"> { System.out.println("Palavra Reservada: " + image); }
    | <TRAIT: "trait"> { System.out.println("Palavra Reservada: " + image); }
    | <IMPL: "impl"> { System.out.println("Palavra Reservada: " + image); }
    | <USE: "use"> { System.out.println("Palavra Reservada: " + image); }
    | <MOD: "mod"> { System.out.println("Palavra Reservada: " + image); }
    | <PUB: "pub"> { System.out.println("Palavra Reservada: " + image); }
    | <CRATE: "crate"> { System.out.println("Palavra Reservada: " + image); }
    | <SELF: "self"> { System.out.println("Palavra Reservada: " + image); }
    | <SUPER: "super"> { System.out.println("Palavra Reservada: " + image); }
    | <AS: "as"> { System.out.println("Palavra Reservada: " + image); }
    | <MATCH: "match"> { System.out.println("Palavra Reservada: " + image); }
    | <IF: "if"> { System.out.println("Palavra Reservada: " + image); }
    | <ELSE: "else"> { System.out.println("Palavra Reservada: " + image); }
    | <LOOP: "loop"> { System.out.println("Palavra Reservada: " + image); }
    | <WHILE: "while"> { System.out.println("Palavra Reservada: " + image); }
    | <FOR: "for"> { System.out.println("Palavra Reservada: " + image); }
    | <IN: "in"> { System.out.println("Palavra Reservada: " + image); }
    | <BREAK: "break"> { System.out.println("Palavra Reservada: " + image); }
    | <CONTINUE: "continue"> { System.out.println("Palavra Reservada: " + image); }
    | <RETURN: "return"> { System.out.println("Palavra Reservada: " + image); }
    | <TRUE: "true"> { System.out.println("Literal BooMENOR_IGUALano: " + image); }
    | <FALSE: "false"> { System.out.println("Literal BooMENOR_IGUALano: " + image); }
    | <PRINTLN: "println!"> { System.out.println("Macro: " + image); }
    | <MACRO_RUMENOR_IGUALS: "macro_ruMENOR_IGUALs!"> { System.out.println("Macro: " + image); }
}

// TIPOS PRIMITIVOS COMUNS (Simplificado, Rust tem muitos outros)
TOKEN :
{
      <I8: "i8"> { System.out.println("Tipo: " + image); }
    | <I16: "i16"> { System.out.println("Tipo: " + image); }
    | <I32: "i32"> { System.out.println("Tipo: " + image); }
    | <I64: "i64"> { System.out.println("Tipo: " + image); }
    | <ISIZE: "isize"> { System.out.println("Tipo: " + image); }
    | <U8: "u8"> { System.out.println("Tipo: " + image); }
    | <U16: "u16"> { System.out.println("Tipo: " + image); }
    | <U32: "u32"> { System.out.println("Tipo: " + image); }
    | <U64: "u64"> { System.out.println("Tipo: " + image); }
    | <USIZE: "usize"> { System.out.println("Tipo: " + image); }
    | <F32: "f32"> { System.out.println("Tipo: " + image); }
    | <F64: "f64"> { System.out.println("Tipo: " + image); }
    | <BOOL_TYPE: "bool"> { System.out.println("Tipo: " + image); }
    | <CHAR_TYPE: "char"> { System.out.println("Tipo: " + image); }
    | <STR_TYPE: "str"> { System.out.println("Tipo: " + image); }
    | <STRING_TYPE: "String"> { System.out.println("Tipo: " + image); } // String alocada no heap
    | <UNIT_TYPE: "()"> { System.out.println("Tipo: " + image); } // Tipo unitário
}

// DELIMITADORES
TOKEN:
{
      <ABRE_PARENTESES: "("> { System.out.println("Abre Parênteses: " + image); }
    | <FECHA_PARENTESES: ")"> { System.out.println("Fecha Parênteses: " + image); }
    | <ABRE_CHAVE: "{"> { System.out.println("Abre Chaves: " + image); }
    | <FECHA_CHAVE: "}"> { System.out.println("Fecha Chaves: " + image); }
    | <ABRE_COLCHETE: "["> { System.out.println("Abre Colchetes: " + image); }
    | <FECHA_COLCHETE: "]"> { System.out.println("Fecha Colchetes: " + image); }
    | <PONTO_VIRGULA: ";"> { System.out.println("Ponto e Vírgula: " + image); }
    | <VIRGULA: ","> { System.out.println("Vírgula: " + image); }
    | <PONTO: "."> { System.out.println("Ponto: " + image); }
    | <DOIS_PONTOS: ":"> { System.out.println("Dois Pontos: " + image); }
    | <DOIS_DOIS_PONTOS: "::"> { System.out.println("Dois Dois Pontos (Path Separator): " + image); }
    | <SETA: "->"> { System.out.println("Seta (Return Type): " + image); }
}

// OPERADORES
TOKEN :
{
      <RECEBE: "="> { System.out.println("Operador de Atribuição: " + image); }
    | <IGUAL: "=="> { System.out.println("Operador de Igualdade: " + image); }
    | <DIFERENTE: "!="> { System.out.println("Operador de Diferente: " + image); }
    | <MENOR: "<"> { System.out.println("Operador Menor: " + image); }
    | <MENOR_IGUAL: "<="> { System.out.println("Operador Menor Igual: " + image); }
    | <MAIOR: ">"> { System.out.println("Operador Maior: " + image); }
    | <MAIOR_IGUAL: ">="> { System.out.println("Operador Maior Igual: " + image); }
    | <AND_OP: "&&"> { System.out.println("Operador Lógico AND: " + image); }
    | <OR_OP: "||"> { System.out.println("Operador Lógico OR: " + image); }
    | <NOT_OP: "!"> { System.out.println("Operador Lógico NOT: " + image); }
    | <MAIS: "+"> { System.out.println("Operador de Adição: " + image); }
    | <MENOS: "-"> { System.out.println("Operador de Subtração: " + image); }
    | <ASTERISCO: "*"> { System.out.println("Operador de MuMENORiplicação: " + image); }
    | <BARRA: "/"> { System.out.println("Operador de Divisão: " + image); }
    | <PORCENTO: "%"> { System.out.println("Operador de Módulo: " + image); }
    | <MAIS_RECEBE: "+="> { System.out.println("Operador de Atribuição de Adição: " + image); }
    | <MENOS_RECEBE: "-="> { System.out.println("Operador de Atribuição de Subtração: " + image); }
    | <ASTERISCO_RECEBE: "*="> { System.out.println("Operador de Atribuição de MuMENORiplicação: " + image); }
    | <BARRA_RECEBE: "/="> { System.out.println("Operador de Atribuição de Divisão: " + image); }
    | <PORCENTO_RECEBE: "%="> { System.out.println("Operador de Atribuição de Módulo: " + image); }
}

// IDENTIFICADOR E LITERAIS
TOKEN:
{
      <IDENTIFICADOR: <LETRA> (<LETRA> | <DIGITO> | "_")*> // ALTERAR DEPOIS ACEITA COMEÇAR COM _
        {
          System.out.println("Identificador: " + image);
        }
    | <#LETRA: (["a"-"z", "A"-"Z"])>
    | <#DIGITO: ["0"-"9"]>
}

TOKEN:
{
      <INTEGER_LITERAL: ("+"|"-")? (["0"-"9"])+>
        {
          System.out.println("Literal Inteiro: " + image);
        }
    | <FLOATING_LITERAL: ("+"|"-")? (["0"-"9"])+ "." (["0"-"9"])+ (("e"|"E")("+"|"-")?(["0"-"9"])+)? >
        {
          System.out.println("Literal Ponto Flutuante: " + image);
        }
    | <CHAR_LITERAL: "'" ("\\."|~["'","\\"])* "'" >
        {
          System.out.println("Literal Caractere: " + image);
        }
    | <STRING_LITERAL: "\"" ("\\."|~["\"","\\"])* "\"" >
        {
          System.out.println("Literal String: " + image);
        }
    | <BOOL_LITERAL: ("!")? <TRUE> | <FALSE>>
        {
          System.out.println("Literal BooMENOR_IGUALano: " + image);
        }
}

/**********************************************
* GRAMÁTICA BÁSICA DA LINGUAMAIOR_IGUALM RUST *
***********************************************/

void RUN(): {} {
    Program() <EOF>
}

void Program(): {} {
    (UseDeclaration())*
    (ItemDeclaration())*
}

void UseDeclaration(): {} {
    <USE> Path() <PONTO_VIRGULA>
}

void Path(): {} {
    <IDENTIFICADOR> (<DOIS_DOIS_PONTOS> <IDENTIFICADOR>)*
}

void ItemDeclaration(): {} {
    FunctionDeclaration()
    // | EnumDeclaration() // Adicionar outras declarações conforme DIFERENTEcessário
}

void FunctionDeclaration(): {} {
    (<PUB>)? <FN> <IDENTIFICADOR> Parameters() (ReturnType())? Block()
}

void Parameters(): {} {
    <ABRE_PARENTESES> (ParameterList())? <FECHA_PARENTESES>
}

void ParameterList(): {} {
    Parameter() (<VIRGULA> Parameter())*
}

void Parameter(): {} {
    <IDENTIFICADOR> <DOIS_PONTOS> Type()
}

void ReturnType(): {} {
    <SETA> Type()
}

void Type(): {} {
    <I8> | <I16> | <I32> | <I64> | <ISIZE>
    | <U8> | <U16> | <U32> | <U64> | <USIZE>
    | <F32> | <F64>
    | <BOOL_TYPE>
    | <CHAR_TYPE>
    | <STR_TYPE>
    | <STRING_TYPE>
    | <UNIT_TYPE>
    | <IDENTIFICADOR> // Para tipos definidos pelo usuário (structs, enums)
}

void Block(): {} {
    <ABRE_CHAVE> (Statement())* <FECHA_CHAVE>
}

void Statement(): {} {
    LetStatement() <PONTO_VIRGULA>
    | ReturnStatement() <PONTO_VIRGULA>
    | IfExpression()
    | LoopExpression()
    | WhileExpression()
    | ForExpression()
    | BreakStatement() <PONTO_VIRGULA>
    | ContinueStatement() <PONTO_VIRGULA>
    // Adicionar outras declarações e expressões como atribuições
}

void LetStatement(): {} {
    <MENOR_IGUALT> (<MUT>)? <IDENTIFICADOR> (<DOIS_PONTOS> Type())? (<RECEBE> Expression())?
}

void ExpressionStatement(): {} {
    Expression()
}

void ReturnStatement(): {} {
    <RETURN> (Expression())?
}

void IfExpression(): {} {
    <IF> Expression() Block() (<ELSE> (IfExpression() | Block()))?
}

void LoopExpression(): {} {
    <LOOP> Block()
}

void WhileExpression(): {} {
    <WHILE> Expression() Block()
}

void ForExpression(): {} {
    <FOR> <IDENTIFICADOR> <IN> Expression() Block()
}

void BreakStatement(): {} {
    <BREAK>
}

void ContinueStatement(): {} {
    <CONTINUE>
}

void FunctionCall(): {} {
    <IDENTIFICADOR> <ABRE_PARENTESES> (ArgumentList())? <FECHA_PARENTESES>
}

void StructField(): {} {
    (<PUB>)? <IDENTIFICADOR> <DOIS_PONTOS> Type()
}

void Expression(): {} {
    ConditionalOrExpression()
}

void ConditionalOrExpression(): {} {
    ConditionalAndExpression() (<OR_OP> ConditionalAndExpression())*
}

void ConditionalAndExpression(): {} {
    EqualityExpression() (<AND_OP> EqualityExpression())*
}

void EqualityExpression(): {} {
    RelationalExpression() ((<IGUAL> | <DIFERENTE>) RelationalExpression())*
}

void RelationalExpression(): {} {
    AdditiveExpression() ((<MENOR> | <MENOR_IGUAL> | <MAIOR> | <MAIOR_IGUAL>) AdditiveExpression())*
}

void AdditiveExpression(): {} {
    MultiplicativeExpression() ((<MAIS> | <MENOS>) MultiplicativeExpression())*
}

void MultiplicativeExpression(): {} {
    UnaryExpression() ((<ASTERISCO> | <BARRA> | <PORCENTO>) UnaryExpression())*
}

void UnaryExpression(): {} {
    (<NOT_OP> | <MENOS>) UnaryExpression()
    | PrimaryExpression()
}

void PrimaryExpression(): {} {
    <INTEGER_LITERAL>
    | <FLOATING_LITERAL>
    | <STRING_LITERAL>
    | <CHAR_LITERAL>
    | <BOOL_LITERAL>
    | <ABRE_PARENTESES> Expression() <FECHA_PARENTESES>
    | FunctionCall() // Chamadas de função podem ser expressões
}

void ArgumentList(): {} {
    Expression() (<VIRGULA> Expression())*
}
